circles have been removed

--- a/my-theme.css
+++ b/my-theme.css
@@ -1,5 +1,4 @@
-
-/* adds NHS logo in top right and circles in bottom right of all slides */
+/* adds NHS logo in top right of all slides */
 slides > slide {
   background: white;
   background-image: url("images/nhs_logo.png") !important;
